--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                       </g>
                       </svg>
                       Wen mint
-                    </label>
+                    </label>https://github.com/antony671/reavers/blob/main/index.html
                     <input id="opt-6" type="checkbox" value="Partnership">
                     <label for="opt-6">
                       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -262,3 +262,7 @@
 <script src="assets/js/functions-min.js"></script>
 </body>
 </html>
+
+<head>
+  <link rel="shortcut icon" img src="assets/img/logo.png"/>
+</head>
