--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   
                   <span class="btn-background"></span>
                 </button>
-                <video src="assets/img/introduction-visual.mp4"
+                <video src="assets/img/introduction-visual.MP4"
                   height="485" 
                   autoplay
                   loop 
